--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!doctype html>
+<html lang="vi">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>50cntt1 - Tour AI Demo</title>
+    <meta name="description" content="Demo website đặt tour Việt Nam tích hợp chatbot AI (RAG demo) chạy GitHub Pages." />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
 
